errlog
g++ -std=c++17 -c ./src/*.cpp
./src/gui.cpp:3:1: error: ISO C++ forbids declaration of ‘Gui’ with no type [-fpermissive]
    3 | Gui() : mesh(MESH_SIZE_X, MESH_SIZE_Y, hX, hY), this->window(sf::RenderWindow(sf::VideoMode(WINDOW_X, WINDOW_Y), "ViFDM")) {}
      | ^~~
./src/gui.cpp: In function ‘int Gui()’:
./src/gui.cpp:3:9: error: only constructors take member initializers
    3 | Gui() : mesh(MESH_SIZE_X, MESH_SIZE_Y, hX, hY), this->window(sf::RenderWindow(sf::VideoMode(WINDOW_X, WINDOW_Y), "ViFDM")) {}
      |         ^~~~
./src/gui.cpp:3:49: error: expected identifier before ‘this’
    3 | Gui() : mesh(MESH_SIZE_X, MESH_SIZE_Y, hX, hY), this->window(sf::RenderWindow(sf::VideoMode(WINDOW_X, WINDOW_Y), "ViFDM")) {}
      |                                                 ^~~~
./src/gui.cpp:3:49: error: expected ‘{’ before ‘this’
./src/gui.cpp:3:49: warning: no return statement in function returning non-void [-Wreturn-type]
./src/gui.cpp: At global scope:
./src/gui.cpp:3:49: error: expected unqualified-id before ‘this’
make: *** [Makefile:2: build] Error 1
